# mcp_kafka

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  CONFIGURATION.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  dependency-review.yml  license-compliance.yml  pre-commit.yml  release.yml  sonarcloud.yml
scripts/: build-image.sh  dev-down.sh  dev-up.sh  http-read.sh  http-readwrite.sh  live-producer.sh  seed-data.sh
src/mcp_kafka/: __init__.py  __main__.py  config.py  version.py
src/mcp_kafka/auth/: __init__.py  middleware.py
src/mcp_kafka/fastmcp_tools/: __init__.py  cluster.py  common.py  consumer_group.py  message.py  registration.py  topic.py
src/mcp_kafka/kafka_wrapper/: __init__.py  client.py
src/mcp_kafka/middleware/: __init__.py  audit.py  debug_logging.py  rate_limit.py  safety.py  stack.py  utils.py
src/mcp_kafka/safety/: __init__.py  core.py
src/mcp_kafka/utils/: __init__.py  errors.py  logger.py
tests/: __init__.py  conftest.py
tests/fuzz/: __init__.py  test_fuzz_validation.py
tests/integration/: __init__.py  conftest.py  test_kafka_operations.py  test_middleware.py
tests/unit/: __init__.py  test_access_control.py  test_audit_middleware.py  test_auth_middleware.py  test_cluster_tools.py  test_config.py  test_consumer_group_tools.py  test_debug_logging.py  test_errors.py  test_kafka_client.py  test_logger.py  test_main.py  test_message_tools.py  test_middleware_stack.py  test_middleware_utils.py  test_rate_limit_middleware.py  test_registration.py  test_safety_middleware.py  test_topic_tools.py  test_version.py
