[project]
name = "mcp-kafka"
version = "0.1.0"
description = "Model Context Protocol server for Apache Kafka"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "James Williams" }
]
keywords = [
    "mcp",
    "kafka",
    "model-context-protocol",
    "ai",
    "claude",
    "streaming",
    "apache-kafka",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=2.13.1",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "loguru>=0.7.3",
    "limits>=5.6.0",
    "authlib>=1.6.5",
    "httpx>=0.28.1",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "testcontainers>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.14.5",
    "hypothesis>=6.0.0",
]
fuzz = [
    "atheris>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/williajm/mcp_kafka"
Repository = "https://github.com/williajm/mcp_kafka"
Issues = "https://github.com/williajm/mcp_kafka/issues"

[project.scripts]
mcp-kafka = "mcp_kafka.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_kafka"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".gitignore",
    ".git",
    ".github",
    ".python-version",
    ".pre-commit-config.yaml",
    "codecov.yml",
    "uv.lock",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "PERF",  # perflint
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",
    "PLR2004",
    "E501",
    "PLC0415",
    "SIM105",
    "SIM117",
    "PLR0915",
    "ERA001",
]
"tests/fuzz/**/*.py" = [
    "N802",
]
"src/mcp_kafka/__main__.py" = [
    "PLR0915",
    "B008",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hypothesis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atheris.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "limits.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["attr-defined", "no-untyped-call", "arg-type", "type-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring Kafka",
    "fuzz: Fuzz tests (run by ClusterFuzzLite)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "hypothesis>=6.147.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
    "testcontainers>=4.0.0",
]
fuzz = [
    "atheris>=2.3.0",
]
