[project]
name = "mcp-kafka"
version = "0.1.0"
description = "Model Context Protocol server for Apache Kafka"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "James Williams" }
]
keywords = [
    "mcp",
    "kafka",
    "model-context-protocol",
    "ai",
    "claude",
    "streaming",
    "apache-kafka",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "fastmcp>=2.14.3",
    "confluent-kafka>=2.3.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
    "loguru>=0.7.3",
    "limits>=5.6.0",
    "authlib>=1.6.6",
    "httpx>=0.28.1",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "testcontainers>=4.0.0",
    "mypy>=1.19.1",
    "ruff>=0.14.9",
    "hypothesis>=6.148.7",
]
fuzz = [
    "atheris>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/williajm/mcp_kafka"
Repository = "https://github.com/williajm/mcp_kafka"
Issues = "https://github.com/williajm/mcp_kafka/issues"
Changelog = "https://github.com/williajm/mcp_kafka/releases"
PyPI = "https://pypi.org/project/mcp-kafka/"

[project.scripts]
mcp-kafka = "mcp_kafka.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_kafka"]

[tool.hatch.build.targets.sdist]
# Explicitly exclude all development, CI, and config files
exclude = [
    ".gitignore",
    ".git",
    ".github",
    ".clusterfuzzlite",
    ".python-version",
    ".pre-commit-config.yaml",
    "codecov.yml",
    "sonar-project.properties",
    "uv.lock",
    "AGENTS.md",
    "CLAUDE.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RET",   # flake8-return
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate
    "PL",    # pylint
    "PERF",  # perflint
]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests need flexibility for fixtures, long assertions, and test-specific patterns
"tests/**/*.py" = [
    "ARG",      # Unused arguments (fixtures may require args for setup)
    "PLR2004",  # Magic values (acceptable in test assertions)
    "E501",     # Line length (test assertions can be long for readability)
    "PLC0415",  # Import at top-level (tests may need conditional imports)
    "SIM105",   # Use contextlib.suppress (explicit try-except-pass is clearer in tests)
    "SIM117",   # Single with statement (separate context managers are more readable)
    "PLR0915",  # Too many statements (integration/E2E tests naturally have many steps)
    "ERA001",   # Commented code (tests sometimes keep old approaches as documentation)
]
# Fuzz tests use Atheris conventions (TestOneInput is required entry point)
"tests/fuzz/**/*.py" = [
    "N802",     # TestOneInput function name is required by Atheris fuzzing framework
]
# Main entry point has Typer CLI setup
"src/mcp_kafka/__main__.py" = [
    "PLR0915",  # Too many statements (main function sets up config and server)
    "B008",     # Typer.Option in defaults is the standard Typer pattern
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "confluent_kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "loguru.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "starlette.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "hypothesis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atheris.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "limits.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["attr-defined", "no-untyped-call", "arg-type", "type-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring Kafka",
    "e2e: End-to-end tests with realistic scenarios",
    "slow: Slow running tests (but still functional)",
    "stress: Stress/performance tests (high resource usage, skip in CI)",
    "fuzz: Fuzz tests (run by ClusterFuzzLite)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "hypothesis>=6.148.7",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "testcontainers>=4.0.0",
]
fuzz = [
    "atheris>=3.0.0",
]
